--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -278,6 +278,10 @@
   top: 482.5px;
 }
 
+.top-\[510px\] {
+  top: 510px;
+}
+
 .top-\[52px\] {
   top: 52px;
 }
@@ -654,6 +658,11 @@
 
 .justify-center {
   justify-content: center;
+}
+
+.gap-x-3 {
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
 }
 
 .py-\[8px\] {
@@ -1404,7 +1413,7 @@ html {
   left: 0px;
   position: relative;
   width: 420px;
-  height: 515px;
+  height: 540px;
 }
 
 .animate {
@@ -1513,6 +1522,20 @@ html {
   font-size: 14px;
   letter-spacing: 1px;
   text-align: center;
+}
+
+.section-calendar .countdown {
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 2px;
+  color: #b10000;
+}
+
+.section-calendar .countdown .coming {
+  font-size: 16px;
+  font-weight: 800;
+  letter-spacing: 3px;
 }
 
 .section-calendar .text-date {
